# Health-Management

./: Cargo.toml  HR.cdc  Presentation_Script.md  README.md  canister_ids.json  dfx.json  flow.json  package-lock.json  package.json
src/Health-Management-backend/: Cargo.toml  Health-Management-backend.did
src/Health-Management-backend/src/: lib.rs
src/Health-Management-frontend/: direct.html  flow.json  index.html  package.json  troubleshoot.html  vite.config.js
src/Health-Management-frontend/contracts/: HealthRecords.cdc
src/Health-Management-frontend/src/: App.tsx  fclConfig.js  index.css  index.tsx
src/Health-Management-frontend/src/component/: AIHealthAgent.tsx  AboutLanding.tsx  Auth.tsx  Contact.tsx  Dashboard.tsx  FAQ.tsx  FlowAuth.tsx  HealthAnalytics.tsx  HealthChallenge.tsx  HealthDataVisualization.tsx  HealthMetrics.tsx  HealthTips.tsx  LandingPage.tsx  Leaderboard.tsx  MedicalSuggestions.tsx  NewRecord.tsx  Notifications.tsx  RecordDetail.tsx  RecordList.tsx  SimpleNotifications.tsx  SimpleTeleHealth.tsx  SimpleWelcome.tsx  SymptomAnalyzer.tsx  TeleHealth.tsx  ThemeContext.tsx  UserContext.tsx  UserProfile.tsx  WeatherSuggestions.tsx
src/Health-Management-frontend/src/flow/: get_records.cdc  mint_record.cdc  setup_account.cdc
src/Health-Management-frontend/src/types/: jspdf-autotable.d.ts
src/Health-Management-frontend/src/utils/: NotificationUtils.ts  formatDate.ts  (+1 more)
src/backend/: package-lock.json  package.json
src/backend/src/: index.js
src/healthchain_backend/: Cargo.toml  healthchain_backend.did
src/healthchain_backend/src/: lib.rs
