[package]
name = "healthchain_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs" 

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1"
ic-cdk-macros = "0.7"
ic-cdk-stable-structures = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] } 


